--- a/index.html
+++ b/index.html
@@ -9,93 +9,100 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="card text-center">
-        <img src="images/profile.jpeg" class = "image_circle" class="text-center" alt="">
-        <h1>Baptiste Lefranc-Morin!</h1>
-        <h2>Ruby Learner</h2>
-        <div>
-          <p>Après 4 ans d'expérience dans le marketing digital
-          j'ai décidé d'<strong>apprendre le code </strong>. </br>
-          C'est pourquoi je suis aujourd'hui en train d'apprendre html et css au wagon
-          </p>
-          <a href="" class ="btn_red"> En savoir plus</a>
+
+    <div id="sidebar">
+      <div class="container">
+        <div class="card text-center">
+          <img src="images/profile.jpeg" class = "image_circle" class="text-center" alt="">
+          <h1>Baptiste Lefranc-Morin</h1>
+          <h2>Ruby Learner</h2>
+          <div>
+            <p>Après 4 ans d'expérience dans le marketing digital
+            j'ai décidé d'<strong>apprendre le code </strong>. </br>
+            C'est pourquoi je suis aujourd'hui en train d'apprendre html et css au wagon
+            </p>
+            <a href="" class ="btn_red"> En savoir plus</a>
+          </div>
         </div>
       </div>
-      <div class="card text-center">
-        <ul class="list-inline">
-          <li>
-            <a href=""> <i class="fa fab fa-facebook"></i> Facebook </a>
-          </li>
-          <li>
-            <a href=""> <i class="fa fab fa-linkedin"></i> Linkedin </a>
-          </li>
-          <li>
-            <a href=""><i class="fa fab fa-github-square"></i> Github </a>
-          </li>
-        </ul>
+
+      <div id="page-content">
+        <div class="card text-center">
+          <ul class="list-inline">
+            <li>
+              <a href=""> <i class="fa fab fa-facebook"></i> Facebook </a>
+            </li>
+            <li>
+              <a href=""> <i class="fa fab fa-linkedin"></i> Linkedin </a>
+            </li>
+            <li>
+              <a href=""><i class="fa fab fa-github-square"></i> Github </a>
+            </li>
+          </ul>
+        </div>
+        <div class ="card">
+          <table>
+            <tbody>
+              <tr>
+                <td>
+                  <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=114782.html">
+                    <img src="images/interstellar.jpeg" class= "img-round img-resize" alt="">
+                  </a>
+                </td>
+                <td>
+                  <div class = movies_text>
+                    <h3>Interstellar</h3>
+                    <p>Le meilleur film SF des dix dernières années</p>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
+                    <img src="images/evades.jpeg" class= "img-round img-resize" alt="">
+                  </a>
+                </td>
+                <td>
+                  <div class = movies_text>
+                    <h3>Les évadés</h3>
+                    <p>Andy essaie de s'échapper de prison pour un meurtre qu'il n'a pas comis</p>
+                  <div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
+                    <img src="images/incendie.jpeg" class= "img-round img-resize" alt="">
+                  </a>
+                </td>
+                <td>
+                  <div class = movies_text>
+                    <h3>Incendie</h3>
+                    <p>Une histoire de famille térrifiante prenant racine dans les conflits au Moyen-Orient</p>
+                  <div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
+                    <img src="images/godfather.jpeg" class= "img-round img-resize" alt="">
+                  </a>
+                </td>
+                <td>
+                  <div class = movies_text>
+                    <h3>The Godfather</h3>
+                    <p>Plongée au coeur de la mafia sicilienne</p>
+                  <div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card text-center">
+          <p>Réalisé avec amour au Wagon</p>
+        <div>
       </div>
-      <div class ="card">
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=114782.html">
-                  <img src="images/interstellar.jpeg" class= "img-round img-resize" alt="">
-                </a>
-              </td>
-              <td>
-                <div class = movies_text>
-                  <h3>Interstellar</h3>
-                  <p>Le meilleur film SF des dix dernières années</p>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                  <img src="images/evades.jpeg" class= "img-round img-resize" alt="">
-                </a>
-              </td>
-              <td>
-                <div class = movies_text>
-                  <h3>Les évadés</h3>
-                  <p>Andy essaie de s'échapper de prison pour un meurtre qu'il n'a pas comis</p>
-                <div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                  <img src="images/incendie.jpeg" class= "img-round img-resize" alt="">
-                </a>
-              </td>
-              <td>
-                <div class = movies_text>
-                  <h3>Incendie</h3>
-                  <p>Une histoire de famille térrifiante prenant racine dans les conflits au Moyen-Orient</p>
-                <div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                  <img src="images/godfather.jpeg" class= "img-round img-resize" alt="">
-                </a>
-              </td>
-              <td>
-                <div class = movies_text>
-                  <h3>The Godfather</h3>
-                  <p>Plongée au coeur de la mafia sicilienne</p>
-                <div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="card text-center">
-        <p>Réalisé avec amour au Wagon</p>
-      <div>
     </div>
+
   </body>
 </html>
