--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="card text-center">
           <img src="images/profile.jpeg" class = "image_circle" class="text-center" alt="">
-          <h1>Baptiste Lefranc-Morin</h1>
+          <h1>Baptiste Lefranc-Morin BLM </h1>
           <h2>Ruby Learner</h2>
           <div>
             <p>Après 4 ans d'expérience dans le marketing digital
