--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
   <body>
 
     <div id="sidebar">
+      <ul>
+        <div class= menu>
+          <li><a href=""><i class="fa fas fa-user"></i></a></li>
+        </div>
+        <div class= menu>
+          <li><a href=""><i class="fa fas fa-link"></i></a></li>
+        </div>
+        <div class= menu>
+          <li><a href=""><i class="fa fas fa-link"></i></a></li>
+        </div>
+      </ul>
+    </div>
+
+    <div id="page-content">
       <div class="container">
         <div class="card text-center">
-          <img src="images/profile.jpeg" class = "image_circle" class="text-center" alt="">
-          <h1>Baptiste Lefranc-Morin BLM </h1>
+          <img src="images/profile.jpeg" class = "i mage_circle" class="text-center" alt="">
+          <h1>Baptiste Lefranc-Morin</h1>
           <h2>Ruby Learner</h2>
           <div>
             <p>Après 4 ans d'expérience dans le marketing digital
@@ -24,9 +38,6 @@
             <a href="" class ="btn_red"> En savoir plus</a>
           </div>
         </div>
-      </div>
-
-      <div id="page-content">
         <div class="card text-center">
           <ul class="list-inline">
             <li>
@@ -102,7 +113,5 @@
           <p>Réalisé avec amour au Wagon</p>
         <div>
       </div>
-    </div>
-
   </body>
 </html>
