--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
     <div id="page-content">
       <div class="container">
         <div class="card text-center">
-          <img src="images/profile.jpeg" class = "i mage_circle" class="text-center" alt="">
+          <img src="images/profile.jpeg" class = "image_circle" class="text-center" alt="">
           <h1>Baptiste Lefranc-Morin</h1>
-          <h2>Ruby Learner</h2>
+          <h2>Student Le Wagon</h2>
           <div>
-            <p>Après 4 ans d'expérience dans le marketing digital
-            j'ai décidé d'<strong>apprendre le code </strong>. </br>
-            C'est pourquoi je suis aujourd'hui en train d'apprendre html et css au wagon
+            <p> J'adore surfer des grandes vagues au Portugal. J'ai par exemple surfé cette vague </br> (ci-dessous) juste avant mon petit déj il y a pile un an. Easy.
             </p>
-            <a href="" class ="btn_red"> En savoir plus</a>
+            <div class="banner">
+              <img src= "images/jaws.jpeg" class="border-radius-light" width=400px height=300px alt="">
+            </div>
+            <a href="https://www.youtube.com/watch?v=8q29a98XOd0" class ="btn_red"> Je veux apprendre à rider</a>
           </div>
         </div>
         <div class="card text-center">
@@ -57,52 +58,39 @@
               <tr>
                 <td>
                   <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=114782.html">
-                    <img src="images/interstellar.jpeg" class= "img-round img-resize" alt="">
+                    <img src="images/jibe.jpeg" class= "img-round img-resize" alt="">
                   </a>
                 </td>
                 <td>
                   <div class = movies_text>
-                    <h3>Interstellar</h3>
-                    <p>Le meilleur film SF des dix dernières années</p>
+                    <h3>Jibe</h3>
+                    <p>Le move basique pour ne pas tomber toutes les 2 min</p>
                   </div>
                 </td>
               </tr>
               <tr>
                 <td>
                   <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                    <img src="images/evades.jpeg" class= "img-round img-resize" alt="">
+                    <img src="images/front.jpeg" class= "img-round img-resize" alt="">
                   </a>
                 </td>
                 <td>
                   <div class = movies_text>
-                    <h3>Les évadés</h3>
-                    <p>Andy essaie de s'échapper de prison pour un meurtre qu'il n'a pas comis</p>
+                    <h3>Front Loop</h3>
+                    <p>Un peu plus technique mais relativement facile à envoyer à une main</p>
                   <div>
                 </td>
               </tr>
               <tr>
                 <td>
                   <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                    <img src="images/incendie.jpeg" class= "img-round img-resize" alt="">
+                    <img src="images/waves.jpeg" class= "img-round img-resize" alt="">
                   </a>
                 </td>
                 <td>
                   <div class = movies_text>
-                    <h3>Incendie</h3>
-                    <p>Une histoire de famille térrifiante prenant racine dans les conflits au Moyen-Orient</p>
-                  <div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=1628.html">
-                    <img src="images/godfather.jpeg" class= "img-round img-resize" alt="">
-                  </a>
-                </td>
-                <td>
-                  <div class = movies_text>
-                    <h3>The Godfather</h3>
-                    <p>Plongée au coeur de la mafia sicilienne</p>
+                    <h3>Wave loop</h3>
+                    <p>Vient rapidement avec un peu de pratique. N'hésitez pas à l'envoyer dans des grandes vagues</p>
                   <div>
                 </td>
               </tr>
